--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
   </head>
 
   <body id="top">
+    <div id="template" style="display:none;">
+        <li class="timeline-item period" id="month-start">
+            <div class="timeline-info"></div>
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+                <h2 class="timeline-title">March</h2>
+            </div>
+        </li>
+
+        <li class="timeline-item" id="month-item">
+            <div class="timeline-info">
+                <span>March 12, 2016</span>
+            </div>
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+                <h3 class="timeline-title">Event Title</h3>
+                <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
+                    eu pede mollis pretium. Pellentesque ut neque.</p>
+            </div>
+        </li>
+    </div>
     <div class="container">
         <div class="row example-split">
           <div class="col-12 example-title">
@@ -26,6 +47,13 @@
           </div>
           <div class="col-10">
               <ul class="timeline timeline-split">
+                  <li class="timeline-item period">
+                      <div class="timeline-info"></div>
+                      <div class="timeline-marker"></div>
+                      <div class="timeline-content">
+                          <h2 class="timeline-title">March</h2>
+                      </div>
+                  </li>
                   <li class="timeline-item">
                       <div class="timeline-info">
                           <span>March 12, 2016</span>
@@ -48,11 +76,40 @@
                               eu pede mollis pretium. Pellentesque ut neque. </p>
                       </div>
                   </li>
+                  <li class="timeline-item">
+                      <div class="timeline-info">
+                          <span>March 23, 2016</span>
+                      </div>
+                      <div class="timeline-marker"></div>
+                      <div class="timeline-content">
+                          <h3 class="timeline-title">Event Title</h3>
+                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
+                              eu pede mollis pretium. Pellentesque ut neque. </p>
+                      </div>
+                  </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row example-split">
+            <div class="col-10">
+                <ul class="timeline timeline-split">
                   <li class="timeline-item period">
                       <div class="timeline-info"></div>
                       <div class="timeline-marker"></div>
                       <div class="timeline-content">
-                          <h2 class="timeline-title">April 2016</h2>
+                          <h2 class="timeline-title">April</h2>
+                      </div>
+                  </li>
+                  <li class="timeline-item">
+                      <div class="timeline-info">
+                          <span>April 02, 2016</span>
+                      </div>
+                      <div class="timeline-marker"></div>
+                      <div class="timeline-content">
+                          <h3 class="timeline-title">Event Title</h3>
+                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
+                              eu pede mollis pretium. Pellentesque ut neque. </p>
                       </div>
                   </li>
                   <li class="timeline-item">
@@ -85,5 +142,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="./js/3rdparty/papaparse/papaparse.min.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
