--- a/index.html
+++ b/index.html
@@ -18,125 +18,41 @@
   </head>
 
   <body id="top">
-    <div id="template" style="display:none;">
-        <li class="timeline-item period" id="month-start">
-            <div class="timeline-info"></div>
-            <div class="timeline-marker"></div>
-            <div class="timeline-content">
-                <h2 class="timeline-title">March</h2>
-            </div>
-        </li>
-
-        <li class="timeline-item" id="month-item">
-            <div class="timeline-info">
-                <span>March 12, 2016</span>
-            </div>
-            <div class="timeline-marker"></div>
-            <div class="timeline-content">
-                <h3 class="timeline-title">Event Title</h3>
-                <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
-                    eu pede mollis pretium. Pellentesque ut neque.</p>
-            </div>
-        </li>
+    <!-- Elemento usado como template para criação dos blocos de meses -->
+    <div class="row example-split" id="template-month" style="display: none;">
+        <div class="col-10">
+            <ul class="timeline timeline-split month-start">
+                <li class="timeline-item period">
+                    <div class="timeline-info"></div>
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content">
+                        <h2 class="timeline-title">April</h2>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="container">
+
+    <!-- Elemento usado como template para criação dos itens do calendário -->
+    <li class="timeline-item month-item" id="template-item" style="display:none;">
+        <div class="timeline-info">
+            <span>April 02, 2016</span>
+        </div>
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+            <h3 class="timeline-title">Event Title</h3>
+            <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
+                eu pede mollis pretium. Pellentesque ut neque. </p>
+        </div>
+    </li>
+
+    <div class="container" id="container">
         <div class="row example-split">
-          <div class="col-12 example-title">
-              <h2>Split Timeline</h2>
-              <p>Small devices (tablets, 768px and up)</p>
-          </div>
-          <div class="col-10">
-              <ul class="timeline timeline-split">
-                  <li class="timeline-item period">
-                      <div class="timeline-info"></div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h2 class="timeline-title">March</h2>
-                      </div>
-                  </li>
-                  <li class="timeline-item">
-                      <div class="timeline-info">
-                          <span>March 12, 2016</span>
-                      </div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h3 class="timeline-title">Event Title</h3>
-                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
-                              eu pede mollis pretium. Pellentesque ut neque.</p>
-                      </div>
-                  </li>
-                  <li class="timeline-item">
-                      <div class="timeline-info">
-                          <span>March 23, 2016</span>
-                      </div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h3 class="timeline-title">Event Title</h3>
-                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
-                              eu pede mollis pretium. Pellentesque ut neque. </p>
-                      </div>
-                  </li>
-                  <li class="timeline-item">
-                      <div class="timeline-info">
-                          <span>March 23, 2016</span>
-                      </div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h3 class="timeline-title">Event Title</h3>
-                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
-                              eu pede mollis pretium. Pellentesque ut neque. </p>
-                      </div>
-                  </li>
-                </ul>
+            <div class="col-12 example-title">
+                <h2>Split Timeline</h2>
+                <p>Small devices (tablets, 768px and up)</p>
             </div>
         </div>
-
-        <div class="row example-split">
-            <div class="col-10">
-                <ul class="timeline timeline-split">
-                  <li class="timeline-item period">
-                      <div class="timeline-info"></div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h2 class="timeline-title">April</h2>
-                      </div>
-                  </li>
-                  <li class="timeline-item">
-                      <div class="timeline-info">
-                          <span>April 02, 2016</span>
-                      </div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h3 class="timeline-title">Event Title</h3>
-                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
-                              eu pede mollis pretium. Pellentesque ut neque. </p>
-                      </div>
-                  </li>
-                  <li class="timeline-item">
-                      <div class="timeline-info">
-                          <span>April 02, 2016</span>
-                      </div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h3 class="timeline-title">Event Title</h3>
-                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
-                              eu pede mollis pretium. Pellentesque ut neque. </p>
-                      </div>
-                  </li>
-                  <li class="timeline-item">
-                      <div class="timeline-info">
-                          <span>April 28, 2016</span>
-                      </div>
-                      <div class="timeline-marker"></div>
-                      <div class="timeline-content">
-                          <h3 class="timeline-title">Event Title</h3>
-                          <p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis
-                              eu pede mollis pretium. Pellentesque ut neque. </p>
-                      </div>
-                  </li>
-              </ul>
-          </div>
-        </div>            
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
