Um pouco de amor ao layout e UX, mas falta *muito* carinho ainda

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body id="top">
     <!-- Elemento usado como template para criação dos blocos de meses -->
     <div class="row example-split" id="template-month" style="display: none;">
-        <div class="col-10">
+        <div class="col-12">
             <ul class="timeline timeline-split month-start">
                 <li class="timeline-item period">
                     <div class="timeline-info"></div>
@@ -37,6 +37,7 @@
     <li class="timeline-item month-item" id="template-item" style="display:none;">
         <div class="timeline-info">
             <span>April 02, 2016</span>
+            <sub>Quarta-feira</sub>
         </div>
         <div class="timeline-marker"></div>
         <div class="timeline-content">
@@ -47,10 +48,19 @@
     </li>
 
     <div class="container" id="container">
-        <div class="row example-split">
-            <div class="col-12 example-title">
-                <h2>Split Timeline</h2>
-                <p>Small devices (tablets, 768px and up)</p>
+        <div class="row calendar-header">
+            <div class="col-2 icon">
+                <i class="fa fa-calendar"></i>
+            </div>
+            <div class="col-7 description">
+                <h2>Calendário</h2>
+                <strong>Ciência da Computação</strong>
+                <p>Universidade Federal da Fronteira Sul</p>
+                <p><i class="fa fa-envelope-open-o" title="Em caso de dúvidas, escreva para o e-mail computacao.ch@uffs.edu.br"></i> <a href="mailto:computacao.ch@uffs.edu.br">computacao.ch@uffs.edu.br</a></p>
+            </div>
+            <div class="col-2 headline">
+                <h2>2019/02</h2>
+                <p>2º semestre de 2019</p>
             </div>
         </div>
     </div>
