--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <!-- Estilos externos -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" media="all" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     
     <!-- Estilos da própria aplicação -->
-    <link rel="stylesheet" media="all" href="./css/main.css" type="text/css" />
+    <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="./css/main.css" rel="stylesheet" media="all" type="text/css" />
   </head>
 
   <body id="top">
@@ -23,13 +23,12 @@
         <div class="col-12">
             <ul class="timeline timeline-split month-start">
                 <li class="timeline-item period">
-                    <div class="timeline-info"></div>
-                    <div class="timeline-marker"></div>
                     <div class="timeline-content">
                         <h2 class="timeline-title">April</h2>
                     </div>
                 </li>
             </ul>
+            <hr />
         </div>
     </div>
 
@@ -63,11 +62,13 @@
                 <p>2º semestre de 2019</p>
             </div>
         </div>
+
+        <hr />
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="./js/3rdparty/jquery/jquery-3.3.1.slim.min.js"></script>
+    <script src="./js/3rdparty/popper/popper-1.14.7.min.js"></script>
+    <script src="./js/3rdparty/bootstrap/bootstrap-4.3.1.min.js"></script>
 
     <script src="./js/3rdparty/papaparse/papaparse.min.js"></script>
     <script src="./js/app.js"></script>
